12/2/2021
-   Fixed fleet list ui

22/1/2021
-   Fixed negative numbers in Exp Shop
-   Unit page update

12/1/2021
-   Fixed tutorial challenge

11/1/2021
-   Fleet updater fix and allow downgrade
-   Increased design limit from 20 to 40

9/1/2021
-   Improved battle performances

2/1/2021
-   Improved Auto Fleet updater
-   New cards: "Favourite ship modules" and "Favourite spell"
-   Explorers specialization

20/12/2020
-   Auto Prestige update
-   New ship module: cyborgizer (Modders specialization)

8/12/2020
-   More researches
-   More ship modules
-   Balancement: higher enemies ship level
-   2 Specialization

13/11/2020
-   Megastructure automation card
-   Megastructure buff: from +30% max drones to +40%
-   Fixed date format on battle screen

12/11/2020
-   Ui Fix
-   Large css themes

11/11/2020
-   Ui fix. Tech prestige shop on firefox.

06/11/2020
-   Angular downgrade (memory leak)

31/10/2020
-   New card "Storage"
-   New Prestige "More Storage", misc section

25/10/2020
-   "Extreme modding" card
-   "Better prices scaling" card
-   "Kill Streak: auto win" card
-   Civilian Work auto sort 
-   Fleet auto sort
-   Fixed save problems
-   Fixed problems with automation (time change)

24/10/2020
-   New automation: Auto Warp (requires card)
-   Decreased exp shop "computing regeneration" bonus from 10% to 2%
-   Fixed save not loading in some cases

18/10/2020
-   Experience shop update
-   "Kill Streak: Speed Card" affects acceleration
-   Price of first megastructure is 1e15
-   New challenge "No Exp Multiplier"
-   Fixed multiple "Production stopped" modals at the same time

11/10/2020
-   Added queue length options for space stations and infrastructure automation

10/10/2020
-   Less overwhelming start
-   Ui improvements

5/10/2020
-   Fixed research not unlocking after completing challenges
-   Fixed auto origin

4/10/2020
-   Infrastructure bonus stack additive
-   Added "Stats" page
-   Added technology info